Fri Dec 19 04:06:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC/Parser.cpp:

          . Removed dead code.

Fri Dec 19 04:02:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xsc_be.mpb:
        * MPC/config/xsc_static.mpb:
        * contrib/Utility.mpc:
        * XSC/XSC_BE.mpc:

          . Fixed compilation errors on Windows related to linking against
            the wrong runtime libraries for static/dynamic projects.

        * XSC.mpc:
        * XSC/Parser.cpp:
        * XSC/utils/XML_Error_Handler.cpp:
        * XSC/utils/XML_Helper_T.cpp:
        * XSC/utils/XML_Schema_Resolver.h:
        * XSC/utils/XML_Schema_Resolver.cpp:
        * XSC/utils/XML_Schema_Resolver_T.cpp:
        * XSC/utils/XSC_Utils.mpc:
        * XSC/utils/XercesString.cpp:

          . The previous update of XSC compile with Xerces-C 3.0., however,
            it crashed while generating object models. This commit fixes
            the fatal bug(s) from the previous commit.

Thu Dec 18 09:26:26 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xscrt.mpb:
        * XSC/utils/XML_Schema_Resolver_T.cpp:
        * XSCRT/XSCRT/XSCRT.mpc:
        * XSCRT/XSCRT/utils/File_Reader_T.cpp:
        * XSCRT/XSCRT/utils/Reader_T.h:
        * XSCRT/XSCRT/utils/Reader_T.cpp:

          . Fixed compilation errors related to upgrading to Xerces-C 3.0

        * XSCRT/XSCRT/utils/Console_Error_Handler.h:
        * XSCRT/XSCRT/utils/Console_Error_Handler.cpp:
        * XSCRT/XSCRT/utils/XML_Schema_Resolver_T.h:
        * XSCRT/XSCRT/utils/XML_Schema_Resolver_T.cpp:

          Removed these files.

Wed Dec 17 21:00:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs:

          Changed the name of the /Documentation folder to /docs

        * Documentation:
        * Documentation/DesignNotes:
        * Documentation/ISSUES:
        * Documentation/index.html:

          Removed these files.
